--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-        <title>Jade Kam</title>
-        <link href="index.css" type="text/css" rel="stylesheet">
-    </head>
+    <head></head>
     <body>
-        <h1>Jade Kam</h1>
-        <h2>Experience</h2>
+        Hello World
     </body>
 </html>
