Adding initial website code

--- a/index.html
+++ b/index.html
@@ -1,8 +1,47 @@
 <!DOCTYPE html>
 
 <html>
-    <head></head>
-    <body>
-        Hello World
-    </body>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+    <nav>
+        <ul>
+            <li><a href="#" class="logo">Logo</a></li>
+            <li><a href="#" class="link">About Me</a></li>
+            <li><a href="#" class="link">Projects</a></li>
+            <li><a href="#" class="link">Blog</a></li>
+            <li><a href="#" class="link">Contact</a></li>
+        </ul>
+    </nav>
+
+    <div class="card-body">
+        <div class="card">
+            <div class="card-container">
+                <div class="card-face front-face">
+                    <img src="assets/IMG_0208.jpg" alt="my-picture" />
+                    <h2>Jade Kam</h2>
+                    <h3>4th Year UNSW Computer Science and Commerce Student</h3>
+                </div>
+                <div class="card-face back-face">
+                    <div class="container-about">
+                        <h2>About me</h2>
+                        <p>
+                            Hey, I'm Jade.
+                        </p>
+                        <div class="row">
+                            <a href="" target="_blank"><i class="bi fb bi-facebook"></i></a>
+                            <a href="" target="_blank"><i class="bi fb bi-instagram"></i></a>
+                            <a href="" target="_blank"><i class="bi fb bi-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
