--- a/index.html
+++ b/index.html
@@ -66,23 +66,24 @@
                 </p>
             </div>
 
-            <button class="resume">
-                <div>
-                    <div class="pencil"></div>
-                    <div class="folder">
-                        <div class="top">
-                            <svg viewBox="0 0 24 27">
-                                <path
-                                    d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z">
-                                </path>
-                            </svg>
+            <a href="Jade Kam Resume.pdf" target="_blank">
+                <button class="resume">
+                    <div>
+                        <div class="pencil"></div>
+                        <div class="folder">
+                            <div class="top">
+                                <svg viewBox="0 0 24 27">
+                                    <path
+                                        d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z">
+                                    </path>
+                                </svg>
+                            </div>
+                            <div class="paper"></div>
                         </div>
-                        <div class="paper"></div>
                     </div>
-                </div>
-                Take a look at my resume!
-            </button>
-
+                    Take a look at my resume!
+                </button>
+            </a>
         </section>
 
         <section id="Projects">
@@ -98,20 +99,26 @@
                         feedback to see if you're on the right track!</p>
                     <p>Made using JavaScript, HTML5 & CSS3 for Frontend and Python & Flask for Backend</p>
                     <p id="in-development">In Development</p>
-                    <button class="c-button c-button--gooey"> See Live
-                        <div class="c-button__blobs">
-                            <div></div>
-                            <div></div>
-                            <div></div>
-                        </div>
-                    </button>
-                    <button class="c-button c-button--gooey"> Source
-                        <div class="c-button__blobs">
-                            <div></div>
-                            <div></div>
-                            <div></div>
-                        </div>
-                    </button>
+                    <a href="https://jadekam16.github.io/NumberGuesser/" target="_blank">
+                        <button class="c-button c-button--gooey"> See Live
+                            <div class="c-button__blobs">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </button>
+                    </a>
+
+                    <a href="https://github.com/jadekam16/NumberGuesser" target="_blank">
+                        <button class="c-button c-button--gooey"> Source
+                            <div class="c-button__blobs">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </button>
+                    </a>
+
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="display: block; height: 0; width: 0;">
                         <defs>
                             <filter id="goo">
@@ -241,8 +248,15 @@
         </section>
 
         <section id="Contact">
+            <form class="form">
+                <div class="title">Contact us</div>
+                <input type="text" placeholder="Your email" class="input">
+                <textarea placeholder="Your message"></textarea>
+
+                <button>Submit</button>
+            </form>
+
             <div class="socials-container">
-                <h1>Contact</h1>
                 <a href="#" class="social twitter">
                     <svg height="1em" viewBox="0 0 512 512">
                         <path
@@ -251,7 +265,8 @@
                     </svg>
                 </a>
 
-                <a href="#" class="social facebook"><svg height="1em" viewBox="0 0 320 512">
+                <a href="https://www.facebook.com/jade.kam.3/" target="_blank" class="social facebook"><svg height="1em"
+                        viewBox="0 0 320 512">
                         <path
                             d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z">
                         </path>
@@ -265,7 +280,8 @@
                     </svg>
                 </a>
 
-                <a href="#" class="social instagram"><svg height="1em" viewBox="0 0 448 512">
+                <a href="https://www.instagram.com/jade.ksy/" target="_blank" class="social instagram"><svg height="1em"
+                        viewBox="0 0 448 512">
                         <path
                             d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z">
                         </path>
